--- a/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
@@ -1,22 +1,34 @@
-@Include("../../Custom/GlobalVariables.cshtml")
-@Include("../../Includes/GetImage_new.cshtml")
-<div class="owl-carousel owl-theme">
-   
-    @{
+@inherits Dynamicweb.Rendering.RazorTemplateBase<Dynamicweb.Rendering.RazorTemplateModel<Dynamicweb.Rendering.Template>>
+@using System
+@using System.Web;
+@using System.Collections;
+@using System.Collections.Generic
+@using System.Linq;
+@using Dynamicweb.Content.Items
+
+@Include("Layout.cshtml")
+@Include("../Custom/GlobalVariables.cshtml")
+@Include("../Includes/ArticleHelper.cshtml")
+@Include("../Includes/GetImage_new.cshtml")
+@{
         var pageId = GetPageIdByNavigationTag("SectionsFeed");
         var urlFeed = "/Default.aspx?ID="+pageId;
-    }
+}
 
- <div id="SectiuniCarusel" class="handlebars-wrapper" data-template="SectiuniCaruselTemplate" data-json-feed=@urlFeed>
-        <div class="loader"></div>
-        @*HANDLEBARS TEMPLATE GOES HERE*@
-    </div>
+<div class="col-md-12 col-xs-12 recomandari">
+	<h1 class="block-title">
+		<span>@GetString("Item.ParagraphName")</span>
+	</h1>
+	<div class="owl-carousel owl-theme handlebars-wrapper" id="SectiuniCarusel" class="handlebars-wrapper" data-template="SectiuniCaruselTemplate" data-json-feed=@urlFeed>
+		<div class="loader"></div>
+			@*HANDLEBARS TEMPLATE GOES HERE*@
+	</div>
 </div>
+
 <script id="SectiuniCaruselTemplate" type="text/x-handlebars-template">
-{{#each SectionsContainer}}
-    <div class="item" style="width:100%!important">
-            <a href="/Default.aspx?ID={{pageId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&Crop=0&Format=jpg&Width=230&Height=172' alt="" style="width:100%!important;"/></a>
-        @*<h4><!--<a href="@itemURL">@item.GetString("ItemPublisher:Item.Title.Value")</a>  --></h4>S*@
-    </div>
-{{/each}}
+    {{#each SectionsContainer}}
+        <div class="item" style="width:100%!important">
+                <a href="/Default.aspx?ID={{pageId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&Crop=0&Format=jpg&Width=230&Height=172' alt="" style="width:100%!important;"/></a>
+        </div>
+    {{/each}}
 </script>
