--- a/Templates/Designs/TTonline/Json/QueryPublisher/Companies.cshtml
+++ b/Templates/Designs/TTonline/Json/QueryPublisher/Companies.cshtml
@@ -4,14 +4,17 @@
 @using System.Text.RegularExpressions;
 @using System.Net;
 @using System;
+   
 @functions{
     
 
-    public class SectionsContainer
+    public class CompanyContainer
     {
-        public string itemTitle { get; set; }
-        public string itemId { get; set; }
-        public string itemImagine { get; set; }
+        public string itemProdNumber { get; set; }
+        public string itemName { get; set; }
+        public string itemLogo { get; set; }
+        public string itemLink { get; set; }
+        public string itemId {get; set;}
     }
 	public class Page
     {
@@ -68,7 +71,7 @@
         public string queryResultTotalCount {get; set;}
         public string templateBaseUrl {get; set;}
         public string templateDesignBaseUrl {get; set;}
-        public List<SectionsContainer> SectionsContainer {get; set;}
+        public List<CompanyContainer> CompanyContainer {get; set;}
         public List<Page> Pages {get; set;}
         public List<FacetGroup> FacetGroups { get; set; }
         public List<FacetSelection> FacetSelections { get; set; }
@@ -80,10 +83,10 @@
     int paginaTag = GetPageIdByNavigationTag("PaginaTag");
 	var counter = 1;
     List<Root> feedObject = new List<Root>();
-    List<SectionsContainer> articleFeedObject = new List<SectionsContainer>();
+    List<CompanyContainer> articleFeedObject = new List<CompanyContainer>();
 	
     Root feedRoot = new Root();
-    feedRoot.SectionsContainer = new List<SectionsContainer>();
+    feedRoot.CompanyContainer = new List<CompanyContainer>();
     feedRoot.currentPage= GetString("DwPaging.CurrentPage");
     feedRoot.currentSection="";
     feedRoot.currentArticleType="";
@@ -103,13 +106,20 @@
     feedRoot.templateBaseUrl=GetString("Template:BaseUrl");
     feedRoot.templateDesignBaseUrl=GetString("Template:DesignBaseUrl");
 
-    foreach (LoopItem sectionItem in results){
-        SectionsContainer sectionsContainerObject = new SectionsContainer();
-	    sectionsContainerObject.itemTitle = sectionItem.GetString("Landing_Page_Title");
-        sectionsContainerObject.itemId = sectionItem.GetString("PageIdString");
-        sectionsContainerObject.itemImagine = sectionItem.GetString("Landing_Page_ImagineSectiune");
+    foreach (LoopItem companie in results){
+        CompanyContainer CompanyContainerObject = new CompanyContainer();
+        CompanyContainerObject.itemProdNumber = companie.GetString("NrDeProduse");
+	    CompanyContainerObject.itemName = companie.GetString("Name");
+        CompanyContainerObject.itemId = companie.GetInteger("Id").ToString();
+        CompanyContainerObject.itemLogo = companie.GetString("Logo");
+        var companyId = companie.GetInteger("Id").ToString();
+        var companyPageUrl = companie.GetString("Page_Link");
+        var composedUrl = "/companie?companyID=" + companyId;
+        var tipClient = companie.GetString("TipClient");
+        var finalURL = tipClient == "4" && companyPageUrl != "" ? companyPageUrl : composedUrl;
+        CompanyContainerObject.itemLink = finalURL;
         counter++;
-	    feedRoot.SectionsContainer.Add(sectionsContainerObject);
+	    feedRoot.CompanyContainer.Add(CompanyContainerObject);
     }
 
 //Parameters
