--- a/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
@@ -19,7 +19,7 @@
 	<h1 class="block-title">
 		<span>@GetString("Item.ParagraphName")</span>
 	</h1>
-	<div class="owl-carousel owl-theme handlebars-wrapper" id="SectiuniCarusel" class="handlebars-wrapper" data-template="SectiuniCaruselTemplate" data-json-feed=@urlFeed>
+	<div class="owl-carousel owl-theme handlebars-wrapper" id="SectiuniCarusel" data-template="SectiuniCaruselTemplate" data-slides-number="4" data-json-feed="@urlFeed" >
 		<div class="loader"></div>
 			@*HANDLEBARS TEMPLATE GOES HERE*@
 	</div>
