--- a/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -23,7 +23,7 @@
 <div class="col-md-12">
 	<h3 class="block-title"><span>@GetString("Item.Titlu")</span></h3>
     <div class="carousel-produse">
-        <div class="owl-carousel owl-theme handlebars-wrapper" data-template="CaruselHomepageTemplate" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&Promoted=@productsIDs">
+        <div class="owl-carousel owl-theme handlebars-wrapper" data-template="CaruselProduseTemplate" data-slides-number="4" data-json-feed="/Default.aspx?ID=@pageId&Promoted=@productsIDs">
             <div class="loader"></div>
             @*HANDLEBARS TEMPLATE GOES HERE*@
         </div>
@@ -31,7 +31,7 @@
 </div>
 
 <script id="CaruselProduseTemplate" type="text/x-handlebars-template">
-{{#each this}}
+{{#each Product}}
 
     <div class="item"> 
  
