--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -111,8 +111,13 @@
     min-height: 2em; 
 }
 
-.handlebars-wrapper {
+.handlebars-wrapper, #RecomandariTT, #UltimeleStiri {
     clear: both;
     position: relative;
     min-height: 2em;
+}
+
+#myCarousel .description {
+    height: 150px;
+    overflow: hidden;
 }
