--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Editorial.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Editorial.cshtml
@@ -3,7 +3,7 @@
     var feedPageID = GetPageIdByNavigationTag("ArticlesFeed");
 }
 <div class="widget editorialwidget" style="margin-bottom:0px;">
-    <div class="content sidebar-handlebars-wrapper" role="listbox" data-template="WidgetEditorialTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&type=Editorial&PageSize=1">
+    <div class="content handlebars-wrapper" role="listbox" data-template="WidgetEditorialTemplate"  data-json-feed="/Default.aspx?ID=@feedPageID&type=Editorial&PageSize=1">
 
     </div>
 </div>
@@ -14,7 +14,7 @@
    <h3 class="block-title"><span><a href="@urlEditorial">@Translate("Editorial","Editorial")</a></span></h3>
    <article class="widget-post clearfix">
        <h3><a href='/Default.aspx?ID={{pagePageID}}'>{{itemTitlu}}</a></h3>
-       {{{itemSumar}}}
+        {{{itemSumar}}}
        <p class="text-right"><a href="/Default.aspx?ID={{pagePageID}}" id="editorialLink">@Translate("citeste","Mai mult")</a></p>         
    </article>
    {{/each}}
