--- a/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-6.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-6.cshtml
@@ -10,7 +10,7 @@
 	var companiesIDs = "";
 	foreach (LoopItem i in GetLoop("Item.Lista_Companii"))
 	{
-	    companiesIDs += i.GetString("Item.Lista_Companii.Titlu") + ",";
+	    companiesIDs += i.GetString("Item.Lista_Companii.Id") + ",";
 	}
 }
 <div class="col-md-12 companii-background">
@@ -24,7 +24,7 @@
 </div>
 
 <script id="CarouselCompanii2Template" type="text/x-handlebars-template">
-{{#CompanyContainer}}
+{{#each CompanyContainer}}
 <div class="item col-companie"> 
     <article class="news-block small-block">		
         <figure class="image-overlay-addon companii-logo-figure" >
@@ -37,5 +37,5 @@
         </header>						   
     </article>
 </div>         
-{{/CompanyContainer}}
+{{/each}}
 </script>
