--- a/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_ArticleListRecomandari.cshtml
@@ -1,4 +1,4 @@
-@inherits RazorTemplateBase<RazorTemplateModel<Template>>
+﻿@inherits RazorTemplateBase<RazorTemplateModel<Template>>
 @using Dynamicweb.Rendering
 @using Dynamicweb.Content
 @using System.Linq;
@@ -20,7 +20,7 @@
 	<h3 class="block-title">
 		<span>@Translate("recomandari","Recomandari") T&T</span>
 	</h3>
-    <div id="RecomandariTT" class="handlebars-wrapper" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
+    <div id="RecomandariTT" data-template="RecomandariTTTemplate" data-json-feed="/Default.aspx?ID=@pageId&PageID=@articlesIDs">
         <div class="loader"></div>
         @*HANDLEBARS TEMPLATE GOES HERE*@
     </div>
@@ -34,7 +34,7 @@
             <article class="news-block">
                 <a href="/Default.aspx?ID={{pagePageID}}" class="overlay-link">
                     <figure class="image-overlay proportie-1">
-                        <img src="{{itemImaginePrincipala}}?format=jpg&width=540&height=355&bgcolor=white" class="img-responsive">
+                        <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&format=jpg&width=540&height=355&bgcolor=white" class="img-responsive">
                     </figure>
                 </a>
                 <a href="/Default.aspx?ID={{pageParentPageId}}" class="bg{{itemSectiuneParinteId}} category">{{itemSectiuneParinte}}</a>
@@ -59,7 +59,7 @@
             <article class="simple-post clearfix">
                 <div class="simple-thumb">
                     <a href="/Default.aspx?ID={{pagePageID}}">
-                        <img src="{{itemImaginePrincipala}}?format=jpg&Width=160&Height=120&bgcolor=white" class="img-responsive">
+                        <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&format=jpg&Width=160&Height=120&bgcolor=white" class="img-responsive">
                     </a>
                 </div>
                 <header>
