--- a/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CarouselCompanii-4.cshtml
@@ -9,7 +9,7 @@
 	var companiesIDs = "";
 	foreach (LoopItem i in GetLoop("Item.Lista_Companii"))
 	{
-	    companiesIDs += i.GetString("Item.Lista_Companii.Id") + ",";
+	    companiesIDs += i.GetString("Item.Lista_Companii.Companie") + ",";
 	}
 }
 <div class="col-md-12 companii-background">
@@ -29,7 +29,7 @@
     <div class="item col-companie">
         <article class="news-block small-block">
             <figure class="image-overlay-addon companii-logo-figure">
-                <img src="/Admin/Public/GetImage.ashx?Image={{itemLogo}}&Crop=0&Format=jpg&Width=255&Height=168"/>
+                <img src="/Admin/Public/GetImage.ashx?Image={{itemLogo}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168"/>
             </figure>
             <header class="news-details">
                 <h3 class="news-title">
