--- a/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselCategoryHomepage.cshtml
@@ -1,4 +1,4 @@
-@inherits Dynamicweb.Rendering.RazorTemplateBase<Dynamicweb.Rendering.RazorTemplateModel<Dynamicweb.Rendering.Template>>
+﻿@inherits Dynamicweb.Rendering.RazorTemplateBase<Dynamicweb.Rendering.RazorTemplateModel<Dynamicweb.Rendering.Template>>
 @using System
 @using System.Web;
 @using System.Collections;
@@ -28,7 +28,7 @@
 <script id="SectiuniCaruselTemplate" type="text/x-handlebars-template">
     {{#each SectionsContainer}}
         <div class="item" style="width:100%!important">
-                <a href="/Default.aspx?ID={{pageId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&Crop=0&Format=jpg&Width=230&Height=172' alt="" style="width:100%!important;"/></a>
+                <a href="/Default.aspx?ID={{pageId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=230&Height=172' alt="" style="width:100%!important;"/></a>
         </div>
     {{/each}}
 </script>
