--- a/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonline/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -78,7 +78,7 @@
                        {{#ifCond manufacturer "!==" ""}}
                           <div class="col-xs-6" >      
                                <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                                 <text class="trim-text trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
+                                 <text class="trim-lines-2">@Translate("manufacturer", "Producator"):</text>         
                                </p>
                           </div>
                         <div class="col-xs-6">
@@ -105,7 +105,7 @@
                       
                         <div class="col-xs-6" style="text-align: center;">
                           <p class="simple-share manufacturer" style="text-align:left; font-size: 12px; line-height: 1.2;">
-                         <text class="trim-text trim-lines-2" style="color:black;">{{dealerResult}}</text>
+                         <text class="trim-lines-2" style="color:black;">{{dealerResult}}</text>
                           </p>
                         </div>
                    </div>
