--- a/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Evenimente.cshtml
+++ b/Templates/Designs/TTonline/Custom/Sidebar/New_Widget-Evenimente.cshtml
@@ -26,7 +26,7 @@
 {{#each EvenimenteContainer}}
    <div class="item">
         <figure class="image-overlay">
-			<img src="{{Afis}}" class="img-responsive">
+			<img src="/Admin/Public/GetImage.ashx?Image={{Afis}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive">
         </figure>
         <span>{{title}}</span>                
         <div class="description">{{{Descriere}}}</div>
